# backened/db/src/schema/products.ts
@@ -8,7 +8,11 @@ export const productsTable = pgTable("products", {
   description: text("description").notNull(),
   price: numeric("price", { precision: 10, scale: 2 }).notNull(),
   unit: text("unit").notNull().default("Kg"),
-  imageUrl: text("image_url").notNull(),
+  imageUrl1: text("image_url_1").notNull(),
+  imageUrl2: text("image_url_2"),
+  imageUrl3: text("image_url_3"),
+  imageUrl4: text("image_url_4"),
+  imageUrl5: text("image_url_5"),
   badge: text("badge"),
   inStock: boolean("in_stock").notNull().default(true),
   featured: boolean("featured").notNull().default(false),
